// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`replace translations 1`] = `
"\\"use strict\\";

\\"test translation\\";"
`;

exports[`replace translations 2`] = `
"\\"use strict\\";

\\"test 2 translation\\";"
`;
